--- a/driver/driver/lan_server/ui/style.css
+++ b/driver/driver/lan_server/ui/style.css
@@ -58,3 +58,21 @@ p {
 #typeButton, #buttonPressKey, #buttonKeyValidate, #buttonTypeText, #buttonTextValidate, #buttonCommandFunction, #buttonCommandValidate, #buttonCustomFunction, #buttonCustomValidate {
     display: none;
 }
+
+.no-js #loader {
+    display: none;
+}
+
+.js #loader {
+    display: block; position: absolute; left: 100px; top: 0;
+}
+
+.gif-loading {
+	position: fixed;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+	z-index: 9999;
+	background: url(loading.gif) center no-repeat #fff;
+}
