Add support for ADC in UI + reorganized accordingly

--- a/driver/driver/lan_server/ui/style.css
+++ b/driver/driver/lan_server/ui/style.css
@@ -55,7 +55,7 @@ p {
     font-size: 5px;
 }
 
-#typeButton, #buttonPressKey, #buttonKeyValidate, #buttonTypeText, #buttonTextValidate, #buttonCommandFunction, #buttonCommandValidate, #buttonCustomFunction, #buttonCustomValidate {
+#typeButton, #buttonPressKey, #buttonKeyValidate, #buttonTypeText, #buttonTextValidate, #buttonCommandFunction, #buttonCommandValidate, #buttonCustomFunction, #buttonCustomValidate, #typeADC, #adcChangeVolume, #adcVolumeValidate, #adcCustomFunction, #adcCustomValidate {
     display: none;
 }
 
