--- a/driver/driver/lan_server/ui/style.css
+++ b/driver/driver/lan_server/ui/style.css
@@ -37,7 +37,7 @@ body {
 }
 
 .container .logo {
-    width: 50%;
+    width: 40%;
     text-align: center;
 }
 
@@ -56,7 +56,7 @@ p {
     font-size: 5px;
 }
 
-#typeButton, #buttonPressKey, #buttonKeyValidate, #buttonTypeText, #buttonTextValidate, #buttonCommandFunction, #buttonCommandValidate, #buttonCustomFunction, #buttonCustomValidate, #typeADC, #adcVolumeValidate, #adcCustomFunction, #adcCustomValidate, #typeKeyboard, #typeKeyboardKey, #keyboardPressKey, #keyboardKeyValidate, #keyboardTypeText, #keyboardTextValidate, #keyboardCommandFunction, #keyboardCommandValidate, #keyboardCustomFunction, #keyboardCustomValidate {
+#typeButton, #buttonPressKey, #buttonKeyValidate, #buttonTypeText, #buttonTextValidate, #buttonCommandFunction, #buttonCommandValidate, #buttonCustomFunction, #buttonCustomValidate, #typeADC, #adcVolumeValidate, #adcCustomFunction, #adcCustomValidate, #typeKeyboard, #typeKeyboardKey, #keyboardPressKey, #keyboardKeyValidate, #keyboardTypeText, #keyboardTextValidate, #keyboardCommandFunction, #keyboardCommandValidate, #keyboardCustomFunction, #keyboardCustomValidate, #typeGamepad, #typeGamepadKey, #gamepadPressKey, #gamepadKeyValidate, #gamepadTypeText, #gamepadTextValidate, #gamepadCommandFunction, #gamepadCommandValidate, #gamepadCustomFunction, #gamepadCustomValidate {
     display: none;
 }
 
@@ -87,4 +87,8 @@ text {
 
 .open_editor {
     text-align: right;
+}
+
+.xbox_one {
+    height: 12vw;
 }
