--- a/driver/driver/lan_server/ui/style.css
+++ b/driver/driver/lan_server/ui/style.css
@@ -85,6 +85,12 @@ text {
     cursor: pointer;
 }
 
+h2 {
+    font-family: "Open Sans";
+    font-size: 16px;
+    font-weight: bold;
+}
+
 .open_editor {
     text-align: right;
 }
